--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@headlessui/react": "^2.0.4",
     "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.1.5",
-    "@js4cytoscape/ndex-client": "^0.3.2",
+    "@js4cytoscape/ndex-client": "^0.4.3-alpha.5",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.83.0",
     "clsx": "^2.1.0",
